Fixed game screen styles on mobile

--- a/src/styles/Game.css
+++ b/src/styles/Game.css
@@ -353,7 +353,7 @@
     }
 
     .Full {
-        width: 80%;
+        width: 60%;
     }
 
     .Hide {
